--- a/Praestholm.Api/Praestholm.Api.csproj
+++ b/Praestholm.Api/Praestholm.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>f824dd95-c53b-40d0-a2ef-7396c4410aba</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
