--- a/Praestholm.Api/appsettings.json
+++ b/Praestholm.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GitHub": {
+    "User": "TheActualOskar",
+    "PortfolioTopic": "portfolio",
+    "FeaturedTopic": "featured",
+    "CacheMinutes": 360
+  }
 }
