--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,7 @@ name: Deploy to Simply
 on:
   push:
     branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
@@ -16,6 +17,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
+          cache: "npm"
+          cache-dependency-path: client/package-lock.json
 
       - name: Build frontend (Vite)
         working-directory: client
@@ -32,21 +35,28 @@ jobs:
         run: |
           dotnet publish Praestholm.Api/Praestholm.Api.csproj -c Release -r win-x86 --self-contained true -o out/publish
 
-
       - name: Copy frontend into publish wwwroot
         run: |
           mkdir -p out/publish/wwwroot
           rm -rf out/publish/wwwroot/*
           cp -R client/dist/* out/publish/wwwroot/
 
-      - name: Deploy via FTPS
+      - name: Create deploy zip
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y zip
+          cd out/publish
+          zip -r ../deploy.zip .
+
+      - name: Deploy zip via FTPS
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           protocol: ftps
-          local-dir: out/publish/
+          local-dir: out/
           server-dir: ${{ secrets.FTP_REMOTE_DIR }}
-          state-name: .ftp-deploy-sync-state.json
+          include: |
+            deploy.zip
           log-level: minimal
