--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,22 +41,16 @@ jobs:
           rm -rf out/publish/wwwroot/*
           cp -R client/dist/* out/publish/wwwroot/
 
-      - name: Create deploy zip
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y zip
-          cd out/publish
-          zip -r ../deploy.zip .
 
-      - name: Deploy zip via FTPS
+
+      - name: Deploy via FTPS
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           protocol: ftps
-          local-dir: out/
+          local-dir: out/publish/
           server-dir: ${{ secrets.FTP_REMOTE_DIR }}
-          include: |
-            deploy.zip
+          state-name: .ftp-deploy-sync-state.json
           log-level: minimal
