--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,29 @@ jobs:
           rm -rf out/publish/wwwroot/*
           cp -R client/dist/* out/publish/wwwroot/
 
+      - name: Install lftp
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y lftp
 
+      - name: Put site in maintenance (app_offline.htm)
+        run: |
+          echo "Updating… please refresh in a moment." > app_offline.htm
+          lftp -e "
+            set ftp:ssl-force true;
+            set ftp:ssl-protect-data true;
+            set net:timeout 20;
+            set net:max-retries 2;
+            open -u ${FTP_USERNAME},${FTP_PASSWORD} ${FTP_HOST};
+            cd ${FTP_REMOTE_DIR};
+            put app_offline.htm -o app_offline.htm;
+            bye
+          "
+        env:
+          FTP_HOST: ${{ secrets.FTP_HOST }}
+          FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
+          FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+          FTP_REMOTE_DIR: ${{ secrets.FTP_REMOTE_DIR }}
 
       - name: Deploy via FTPS
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
@@ -54,3 +76,22 @@ jobs:
           server-dir: ${{ secrets.FTP_REMOTE_DIR }}
           state-name: .ftp-deploy-sync-state.json
           log-level: minimal
+
+      - name: Bring site back (remove app_offline.htm)
+        if: always()
+        run: |
+          lftp -e "
+            set ftp:ssl-force true;
+            set ftp:ssl-protect-data true;
+            set net:timeout 20;
+            set net:max-retries 2;
+            open -u ${FTP_USERNAME},${FTP_PASSWORD} ${FTP_HOST};
+            cd ${FTP_REMOTE_DIR};
+            rm -f app_offline.htm;
+            bye
+          "
+        env:
+          FTP_HOST: ${{ secrets.FTP_HOST }}
+          FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
+          FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+          FTP_REMOTE_DIR: ${{ secrets.FTP_REMOTE_DIR }}
