Add blog section with MSSQL backend and React frontend

--- a/Praestholm.Api/appsettings.json
+++ b/Praestholm.Api/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Blog": "Server=localhost,1433;Database=PraestholmBlog;User Id=sa;Password=YOUR_PASSWORD;TrustServerCertificate=True"
+  },
   "GitHub": {
     "User": "TheActualOskar",
     "PortfolioTopic": "portfolio",
