--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@
 .DS_Store
 
 appsettings.Development.json
+appsettings.Production.json
 Praestholm.Api/appsettings.Development.json
+Praestholm.Api/appsettings.Production.json
 
 # build/publish output
 publish/
