Add blog link button to project cards
Link projects to related blog posts via a configurable
BlogLinks mapping in appsettings.json. When a project has
a matching blog slug, a "Read Blog" button appears alongside
the existing Source Code and Live Demo actions.

--- a/Praestholm.Api/appsettings.json
+++ b/Praestholm.Api/appsettings.json
@@ -14,5 +14,8 @@
     "PortfolioTopic": "portfolio",
     "FeaturedTopic": "featured",
     "CacheMinutes": 360
+  },
+  "BlogLinks": {
+    "MQTTBroker_Csharp": "masters-thesis-query-based-subscription-iot"
   }
 }
