Add API key auth to blog write endpoints

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,7 @@ jobs:
           cd Praestholm.Api
           cat <<EOF > appsettings.Production.json
           {
+            "ApiKey": "${{ secrets.API_KEY }}",
             "ConnectionStrings": {
               "Blog": "${{ secrets.BLOG_CONNECTION_STRING }}"
             },
