--- a/Praestholm.Api/appsettings.json
+++ b/Praestholm.Api/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "ApiKey": "",
   "ConnectionStrings": {
     "Blog": "Server=localhost,1433;Database=PraestholmBlog;User Id=sa;Password=YOUR_PASSWORD;TrustServerCertificate=True"
   },
